Bug 404498 - "Improve GTK look of menu selection" [p=ispence@gmail.com (Ian Spence) r+sr=roc a1.9=schrep]